[tool.poetry]
name = "image-search"
version = "0.1.0"
description = ""
authors = ["Liam Arbuckle <liam@skinetics.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
vecs = "^0.4.3"
sentence-transformers = "^3.0.1"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
seed = "image_search.main:seed"
search = "image_search.main:search"